--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "otau",
+  "name": "zhubanov",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@myena/advanced-select": "^0.5.4",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
+    "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "serve-static": "^1.13.2",
+    "v-slim-dialog": "0.0.9",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.18.0-alpha",
+    "vue-chartjs": "^3.4.2",
     "vue-cookies": "^1.5.7",
     "vue-gallery": "^1.4.2",
     "vue-i18n": "^8.2.1",
     "vue-js-modal": "^1.3.26",
+    "vue-json-excel": "^0.2.96",
+    "vue-multiselect": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuejs-datepicker": "^1.5.3"
   },
